the fifth commit

--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,7 @@ body{
 
 /*-------------------container------------------------------------------------*/
 
-.conteiner{
+.container{
   width: 100vw;
   min-height: 100vh;
 }
