--- a/bouncy/css/parts/_base.scss
+++ b/bouncy/css/parts/_base.scss
@@ -2,12 +2,32 @@ body{
   font-family: 'Open Sans', 'Source Sans Pro', sans-serif;
   font-size: 14px;
   font-weight: 400;
+  width: 100%;
+  min-width: 320px;
 }
 
 .img{
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.btn-menu{
+  display: none;
+  position: absolute;
+  right: 30px;
+  width: 34px;
+  height: 34px;
+  background-color: $white;
+  border: 2px solid transparent;
+  border-radius: 2px;
+  @media(max-width: 600px){
+    display: block;
+  }
+}
+.fa-bars{
+  font-size: 20px;
+  color: $grayText;
 }
 
 .button-up {
