--- a/bouncy/css/sections/_portfolio.scss
+++ b/bouncy/css/sections/_portfolio.scss
@@ -28,6 +28,20 @@
     }
   }
 }
+.filtr-container{
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  @media (max-width: 1235px){
+    max-width: 1000px;
+    @media (max-width: 940px){
+      max-width: 700px;
+      @media (max-width: 640px){
+        max-width: 400px;
+      }
+    }
+  }
+}
 .filtr-item {
     height: 300px;
     width: 300px;
@@ -72,6 +86,15 @@
      &--none{
        margin-right: 0;
      }
+     @media(max-width: 645px){
+      margin-right: 15px;
+
+       @media(max-width: 450px){
+         margin-right: 10px;
+         font-size: 14px
+       }
+     }
+
 }
 
 
