--- a/bouncy/css/sections/_testimonials.scss
+++ b/bouncy/css/sections/_testimonials.scss
@@ -29,6 +29,9 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+      @media(max-width: 515px){
+        flex-direction: column;
+      }
 
       .testimonials__item{
         width: 100%;
